# as-substrate-runtime

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  cr-custom-spec.sh  customSpec.json  docker-compose.yml
.github/workflows/: docker-build.yml  e2e-tests.yml  integration-tests.yml  unit-tests.yml
as-runtime/: build.js  package-lock.json  package.json
as-runtime/assembly/: index.ts
e2e-tests/: config.json  index.js  node-client.js  package-lock.json  package.json  rpc-call.js  utils.js
e2e-tests/test/: block-production.js  syncing.js  transactions.js
node-template/: Dockerfile  compile-purge.sh  cr-custom-spec.sh  customSpec.json  decoded-ext.json  wasm-code
node-template/node/: Cargo.toml
node-template/node/src/: chain_spec.rs  service.rs
node-template/runtime/: Cargo.toml
node-template/runtime/src/: lib.rs
runtime/: build.js  index.js  package-lock.json  package.json
runtime/assembly/: config.ts  constants.ts  env.ts  index.ts  storage.ts  utils.ts
runtime/assembly/__tests__/: account-data.spec.ts  account-id.spec.ts  block.spec.ts  digest-items.spec.ts  extrinsic.spec.ts  header.spec.ts  (+5 more)
runtime/src/: build.js  package.json
rust-runtime/: Cargo.toml
rust-runtime/src/: main.rs
sandbox/: Cargo.toml  compile.sh  run-it.sh  wasm-code
sandbox/src/: lib.rs  main.rs
sandbox/tests/: aura-module_test.rs  balances-module_test.rs  block-builder_test.rs  core_test.rs  grandpa-api_test.rs  others_test.rs  parachain-host_test.rs  storage_test.rs  timestamp-module_test.rs
spec-files/: demoSpecRaw.json  demoSpecRawNetwork.json
(+92 files in other folders)
