[package]
name = "sandbox-execution-environment"
version = "0.1.0"
authors = ["Daniel Ivanov <daniel@limechain.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmi = "0.6.2"
wabt = "0.9.2"
hex = "0.4.2"
sp-wasm-interface = "2.0.0-rc3"
sc-executor = "0.8.0-rc3"
sp-io = "2.0.0-rc3"
sp-core = "2.0.0-rc3"
sp-state-machine = "0.8.0-rc4"
parity-scale-codec = "1.3.1"
sp-runtime = "2.0.0-rc4"
sp-version = "2.0.0-rc4"